# podcast-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  block_script.json  dvc.yaml  pyproject.toml
.dvc/: config
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  push-docker.yml
data/: .gitignore
llm_podcast/: llm.py  schema.py  settings.py
llm_podcast/oparl/: schema.py  scrape.py
output/: podcast_script_20240927_214954.json  podcast_script_20240927_222137.json  podcast_script_20240927_225530.json  podcast_script_20240927_230959.json
scripts/: 01_scrape.py  02_download.py  03_transcribe.py  04_summary.py  05_script.py  06_tts.py  scrape_demo.py
test/data/scripts/: podcast_climate1.json  podcast_climate2.json  podcast_intro.json
test/integration/llm_podcast/: test_llm.py
test/unit/llm_podcast/: test_settings.py
